--- a/app/views/families/_form.html.erb
+++ b/app/views/families/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
 
       <div class="form-inputs field">
-        <%= f.input :label, label: t(:label) %>
+        <%= f.input :label, label: t(:label, scope: 'actions') %>
       </div>
 
       <div class="form-actions">
