--- a/app/views/activities/_form.html.haml
+++ b/app/views/activities/_form.html.haml
@@ -1,7 +1,7 @@
 %tr{data: {search: search_project_activities_url(@project)}}
-  %td= f.input_field :date_activity, label: t(:date), as: :string, input_html: {type: 'date'}
-  %td= f.input_field :worker_id, label: t(:worker), as: :select, label_method: :name, collection: Worker.all
-  %td= f.input_field :num_hours, label: t(:num_hours), label_html: { class: 'text-right middle' }
-  %td= f.input_field :task_id, label: t(:task), as: :select, label_method: :label, collection: Task.where(project: @project)
-  %td= f.input_field :observation, label: t(:observation), as: :string
+  %td= f.input_field :date_activity, label: t(:date, scope: 'actions'), as: :string, input_html: {type: 'date'}
+  %td= f.input_field :worker_id, label: t(:worker, scope: 'actions'), as: :select, label_method: :name, collection: Worker.all
+  %td= f.input_field :num_hours, label: t(:num_hours, scope: 'actions'), label_html: { class: 'text-right middle' }
+  %td= f.input_field :task_id, label: t(:task, scope: 'actions'), as: :select, label_method: :label, collection: Task.where(project: @project)
+  %td= f.input_field :observation, label: t(:observation, scope: 'actions'), as: :string
   %td= f.button :submit, value: action, class: 'success button'
