--- a/app/views/families/index.html.erb
+++ b/app/views/families/index.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1><%=	t(:list_category) %></h1>
+<h1><%=	t(:list_category, scope: 'actions') %></h1>
 
 <div class="small-2 large-6">
   <table>
     <thead>
     <tr>
-      <th><%=	t(:name) %></th>
+      <th><%=	t(:name, scope: 'actions') %></th>
       <th colspan="3"></th>
     </tr>
     </thead>
@@ -15,9 +15,9 @@
     <% @families.each do |family| %>
       <tr>
         <td><%= family.label %></td>
-        <td><%= link_to t(:show), family %></td>
-        <td><%= link_to t(:edit), edit_family_path(family) %></td>
-        <td><%= link_to t(:destroy), family, method: :delete, data: { confirm: t(:confirm) } %></td>
+        <td><%= link_to t(:show, scope: 'actions'), family %></td>
+        <td><%= link_to t(:edit, scope: 'actions'), edit_family_path(family) %></td>
+        <td><%= link_to t(:destroy, scope: 'actions'), family, method: :delete, data: { confirm: t(:confirm, scope: 'actions') } %></td>
       </tr>
     <% end %>
     </tbody>
