--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,10 +1,10 @@
 <div class="row expanded">
   <div class="small-2 large-4 columns">
-    <h1><%= t(:edit_project) %></h1>
+    <h1><%= t(:edit_project, scope: 'actions') %></h1>
 
-    <%= render 'form', action: t(:edit) %>
+    <%= render 'form', action: t(:edit, scope: 'actions') %>
 
-    <%= link_to t(:show), @project, class: 'button' %>
-    <%= link_to t(:back), projects_path, class: 'secondary button' %>
+    <%= link_to t(:show, scope: 'actions'), @project, class: 'button' %>
+    <%= link_to t(:back, scope: 'actions'), projects_path, class: 'secondary button' %>
   </div>
 </div>
