--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,21 +1,21 @@
 <p id="notice"><%= notice %></p>
 
-<h1><%= t(:list_projects) %></h1>
+<h1><%= t(:list_projects, scope: 'actions') %></h1>
 
 
-<div class="small-2 large-10">
+<div>
   <table>
     <thead>
     <tr>
-      <th><%= t(:name) %></th>
-      <th><%= t(:is_close) %></th>
-      <th><%= t(:estimated_start_at) %></th>
-      <th><%= t(:estimated_end_at) %></th>
-      <th><%= t(:estimated_duration) %></th>
-      <th><%= t(:real_start_at) %></th>
-      <th><%= t(:real_end_at) %></th>
-      <th><%= t(:real_duration) %></th>
-      <th><%= t(:difference_hour) %></th>
+      <th><%= t(:name, scope: 'actions') %></th>
+      <th><%= t(:is_close, scope: 'actions') %></th>
+      <th><%= t(:estimated_start_at, scope: 'actions') %></th>
+      <th><%= t(:estimated_end_at, scope: 'actions') %></th>
+      <th><%= t(:estimated_duration, scope: 'actions') %></th>
+      <th><%= t(:real_start_at, scope: 'actions') %></th>
+      <th><%= t(:real_end_at, scope: 'actions') %></th>
+      <th><%= t(:real_duration, scope: 'actions') %></th>
+      <th><%= t(:difference_hour, scope: 'actions') %></th>
       <th colspan="3"></th>
     </tr>
     </thead>
@@ -32,9 +32,9 @@
         <td><%= project.real_end_at %></td>
         <td><%= project.real_duration %></td>
         <td><%= project.difference_hour %></td>
-        <td><%= link_to t(:show), project %></td>
-        <td><%= link_to t(:edit), edit_project_path(project) %></td>
-        <td><%= link_to t(:destroy), project, method: :delete, data: { confirm: t(:confirm) } %></td>
+        <td><%= link_to t(:show, scope: 'actions'), project %></td>
+        <td><%= link_to t(:edit, scope: 'actions'), edit_project_path(project) %></td>
+        <td><%= link_to t(:destroy, scope: 'actions'), project, method: :delete, data: { confirm: t(:confirm, scope: 'actions') } %></td>
       </tr>
     <% end %>
     </tbody>
@@ -44,9 +44,9 @@
 <br>
 
 
-<div class="row">
+<div class="row small-8 small-centered large-centered">
   <% @projects.each do |project| %>
-      <div class="columns small-4 large-3 project-container">
+      <div class="columns project-container">
         <div class="callout">
           <h5><%= link_to project.name, project_path(project)%></h5>
         </div>
