--- a/app/views/settings/_form.html.erb
+++ b/app/views/settings/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@setting) do |f| %>
   <% if @setting.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@setting.errors.count, "error") %> prohibited this setting from being saved:</h2>
+      <h2><%= pluralize(@setting.errors.count, "error", scope: 'actions') %> prohibited this setting from being saved:</h2>
 
       <ul>
       <% @setting.errors.full_messages.each do |message| %>
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label t(:label) %><br>
+    <%= f.label t(:label, scope: 'actions') %><br>
     <%= f.text_field :label %>
   </div>
   <div class="field">
-    <%= f.label t(:value) %><br>
+    <%= f.label t(:value, scope: 'actions') %><br>
     <%= f.text_field :value %>
   </div>
   <div class="actions">
