--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -1,14 +1,14 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong><%=	t(:label) %>:</strong>
+  <strong><%=	t(:label, scope: 'actions') %>:</strong>
   <%= @setting.label %>
 </p>
 
 <p>
-  <strong><%=	t(:value) %>:</strong>
+  <strong><%=	t(:value, scope: 'actions') %>:</strong>
   <%= @setting.value %>
 </p>
 
-<%= link_to t(:edit_setting), edit_setting_path(@setting) %> |
-<%= link_to t(:back), settings_path %>
+<%= link_to t(:edit_setting, scope: 'actions'), edit_setting_path(@setting) %> |
+<%= link_to t(:back, scope: 'actions'), settings_path %>
