--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,10 +1,10 @@
 <div class="row expanded">
   <div class="small-2 large-4 columns">
-    <h1><%=	t(:edit_task) %></h1>
+    <h1><%=	t(:edit_task, scope: 'actions') %></h1>
 
-    <%= render 'form', action: t(:edit) %>
+    <%= render 'form', action: t(:edit, scope: 'actions') %>
 
-    <%= link_to t(:show), project_task_path(@project, @task), class: 'button' %>
-    <%= link_to t(:back), project_tasks_path(@project), class: 'button secondary' %>
+    <%= link_to t(:show, scope: 'actions'), project_task_path(@project, @task), class: 'button' %>
+    <%= link_to t(:back, scope: 'actions'), project_tasks_path(@project), class: 'button secondary' %>
   </div>
 </div>
