--- a/app/views/workers/index.html.erb
+++ b/app/views/workers/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1><%=	t(:list_worker) %></h1>
+<h1><%=	t(:list_worker, scope: 'actions') %></h1>
 
 <div class="small-2 large-8">
   <table>
     <thead>
     <tr>
-      <th><%=	t(:name) %></th>
-      <th><%=	t(:cost_hour) %></th>
+      <th><%=	t(:name, scope: 'actions') %></th>
+      <th><%=	t(:cost_hour, scope: 'actions') %></th>
       <th colspan="3"></th>
     </tr>
     </thead>
@@ -17,9 +17,9 @@
       <tr>
         <td><%= worker.name %></td>
         <td><%= worker.cost_hour %></td>
-        <td><%= link_to t(:show), worker, class: "show" %></td>
-        <td><%= link_to t(:edit), edit_worker_path(worker) %></td>
-        <td><%= link_to t(:destroy), worker, method: :delete, data: { confirm: t(:confirm) } %></td>
+        <td><%= link_to t(:show, scope: 'actions'), worker, class: "show" %></td>
+        <td><%= link_to t(:edit, scope: 'actions'), edit_worker_path(worker) %></td>
+        <td><%= link_to t(:destroy, scope: 'actions'), worker, method: :delete, data: { confirm: t(:confirm, scope: 'actions') } %></td>
       </tr>
     <% end %>
     </tbody>
