--- a/app/views/workers/new.html.erb
+++ b/app/views/workers/new.html.erb
@@ -1,6 +1,6 @@
 <div class="small-2 large-4 columns">
-  <h1><%= t(:new_worker) %></h1>
-  <%= render 'form', action: t(:create) %>
+  <h1><%= t(:new_worker, scope: 'actions') %></h1>
+  <%= render 'form', action: t(:create, scope: 'actions') %>
 
-  <%= link_to t(:back), workers_path, class: 'button secondary' %>
+  <%= link_to t(:back, scope: 'actions'), workers_path, class: 'button secondary' %>
 </div>
