--- a/app/views/families/edit.html.erb
+++ b/app/views/families/edit.html.erb
@@ -1,5 +1,5 @@
-<div class="small-2 large-4 columns">
-  <h1><%= t(:edit_category, scope: 'actions') %></h1>
+<div class=" columns">
+  <h1 class="title"><%= t(:edit_category, scope: 'actions') %></h1>
 
   <%= render 'form', action: t(:edit, scope: 'actions') %>
 
