--- a/app/views/families/index.html.erb
+++ b/app/views/families/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1><%=	t(:list_category, scope: 'actions') %></h1>
+<h1 class="title"><%=	t(:list_category, scope: 'actions') %></h1>
 
-<div class="small-2 large-6">
+<div>
   <table>
     <thead>
     <tr>
       <th><%=	t(:name, scope: 'actions') %></th>
-      <th colspan="3"></th>
+      <th colspan="1"></th>
     </tr>
     </thead>
 
@@ -15,15 +15,14 @@
     <% @families.each do |family| %>
       <tr>
         <td><%= family.label %></td>
-        <td><%= link_to t(:show, scope: 'actions'), family %></td>
-        <td><%= link_to t(:edit, scope: 'actions'), edit_family_path(family) %></td>
-        <td><%= link_to t(:destroy, scope: 'actions'), family, method: :delete, data: { confirm: t(:confirm, scope: 'actions') } %></td>
+        <td><%= link_to t(:show, scope: 'actions'), family %> <%= link_to "<i class='fi-pencil'></i>".html_safe, edit_family_path(family) %> <%= link_to "<i class='fi-x'></i>".html_safe, family, method: :delete, data: { confirm: t(:confirm, scope: 'actions') } %></td>
       </tr>
     <% end %>
     </tbody>
   </table>
 
 </div>
-<br>
+<div class="actions">
 
-<%= link_to t(:new_category), new_family_path, class: 'button' %>
+<%= link_to t(:new_category, scope:'actions'), new_family_path, class: 'button' %>
+</div>
