--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="row expanded">
-  <div class="small-2 large-4 columns">
+  <div class=" columns">
     <h1><%= t(:edit_project, scope: 'actions') %></h1>
 
     <%= render 'form', action: t(:edit, scope: 'actions') %>
