--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1><%= t(:list_projects, scope: 'actions') %></h1>
+<h1 class="title"><%= t(:list_projects, scope: 'actions') %></h1>
 
 
 <div>
@@ -16,7 +16,7 @@
       <th><%= t(:real_end_at, scope: 'actions') %></th>
       <th><%= t(:real_duration, scope: 'actions') %></th>
       <th><%= t(:difference_hour, scope: 'actions') %></th>
-      <th colspan="3"></th>
+      <th colspan="1"></th>
     </tr>
     </thead>
 
@@ -32,17 +32,16 @@
         <td><%= project.real_end_at %></td>
         <td><%= project.real_duration %></td>
         <td><%= project.difference_hour %></td>
-        <td><%= link_to t(:show, scope: 'actions'), project %></td>
-        <td><%= link_to t(:edit, scope: 'actions'), edit_project_path(project) %></td>
-        <td><%= link_to t(:destroy, scope: 'actions'), project, method: :delete, data: { confirm: t(:confirm, scope: 'actions') } %></td>
+        <td><%= link_to t(:show, scope: 'actions'), project %> <%= link_to "<i class='fi-pencil'></i>".html_safe, edit_project_path(project) %> <%= link_to "<i class='fi-x'></i>".html_safe, project, method: :delete, data: { confirm: t(:confirm, scope: 'actions') } %></td>
       </tr>
     <% end %>
     </tbody>
   </table>
 </div>
 
-<br>
-
+<div class="actions">
+  <%= link_to t(:new_project, scope: 'actions'), new_project_path, class: "button newProject" %>
+</div>
 
 <div class="row small-8 small-centered large-centered">
   <% @projects.each do |project| %>
@@ -54,4 +53,3 @@
   <% end %>
 </div>
 
-<%= link_to t(:new_project), new_project_path, class: "button newProject" %>
