--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -2,7 +2,7 @@
 
 
 <div class="row expanded">
-  <div class="small-2 large-4 columns">
+  <div class=" columns">
     <h1><%=	t(:list_setting, scope: 'actions') %></h1>
     <%= simple_form_for :setting, :url => update_all_settings_path, html: {method: :put} do %>
       <% @settings.each do |setting| %>
