--- a/app/views/settings/new.html.erb
+++ b/app/views/settings/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row expanded">
-  <div class="small-2 large-4 columns">
+  <div class=" columns">
     <h1><%=	t(:new_setting, scope: 'actions') %></h1>
 
     <%= render 'form', action: t(:create, scope: 'actions') %>
