--- a/app/views/workers/edit.html.erb
+++ b/app/views/workers/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="small-2 large-4 columns">
+<div class=" columns">
   <h1><%=	t(:edit_worker, scope: 'actions') %></h1>
 
   <%= render 'form', action: t(:edit, scope: 'actions') %>
