--- a/app/views/workers/index.html.erb
+++ b/app/views/workers/index.html.erb
@@ -1,14 +1,14 @@
 <p id="notice"><%= notice %></p>
 
-<h1><%=	t(:list_worker, scope: 'actions') %></h1>
+<h1 class="title"><%=	t(:list_worker, scope: 'actions') %></h1>
 
-<div class="small-2 large-8">
+<div>
   <table>
     <thead>
     <tr>
       <th><%=	t(:name, scope: 'actions') %></th>
       <th><%=	t(:cost_hour, scope: 'actions') %></th>
-      <th colspan="3"></th>
+      <th colspan="1"></th>
     </tr>
     </thead>
 
@@ -17,16 +17,13 @@
       <tr>
         <td><%= worker.name %></td>
         <td><%= worker.cost_hour %></td>
-        <td><%= link_to t(:show, scope: 'actions'), worker, class: "show" %></td>
-        <td><%= link_to t(:edit, scope: 'actions'), edit_worker_path(worker) %></td>
-        <td><%= link_to t(:destroy, scope: 'actions'), worker, method: :delete, data: { confirm: t(:confirm, scope: 'actions') } %></td>
+        <td><%= link_to t(:show, scope: 'actions'), worker, class: "show" %> <%= link_to "<i class='fi-pencil'></i>".html_safe, edit_worker_path(worker) %> <%= link_to "<i class='fi-x'></i>".html_safe, worker, method: :delete, data: { confirm: t(:confirm, scope: 'actions') } %></td>
       </tr>
     <% end %>
     </tbody>
   </table>
 
 </div>
-
-<br>
-
-<%= link_to t(:new_worker), new_worker_path, class: "button newWorker" %>
+<div class="actions">
+  <%= link_to t(:new_worker, scope: 'actions'), new_worker_path, class: "button newWorker" %>
+</div>
