--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@
 
 #core {
   //margin: 0 30px;
-  margin-top: -15px;
+  //margin-top: -15px;
 
   h1.title {
     background-color: rgba(250,250,250,0.95);
