--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -119,3 +119,39 @@ tbody {
   font-size: 18px;
   font-weight: bold;
 }
+
+
+.bar {
+  &.bg-primary {
+    background-color: transparentize($primary-color, 0.2);
+
+  }
+  &.bg-warning {
+    background-color: transparentize($warning-color, 0.2);
+    margin-top: 12px;
+    height: 60px;
+  }
+  &.bg-alert {
+    background-color: transparentize($alert-color, 0.2);
+    margin-top: 0;
+    height: 12px;
+  }
+}
+
+.fn-gantt .bar.bg-alert .fn-label {
+  line-height: 12px;
+}
+
+
+
+/*reset for gantt*/
+.row .row{
+  &.day, &.date {
+    margin: -1px 0 0 -1px;
+    text-align: center;
+  }
+}
+.fn-gantt .row.header {
+  width: 100%;
+  max-width: 100%;
+}
