--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,5 +1,6 @@
-<p id="notice"><%= notice %></p>
-
+<%- if notice %>
+  <div id="notice" class="success callout"><%= notice %></div>
+<%- end %>
 <h1 class="title"><%= t(:summary_activities, scope: 'actions') %> </h1>
 
 <%= simple_form_for([@project, @activity], url: project_activities_path, remote: :true, class: 'activity_form') do |f| %>
