--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1 class="title"><%=	t(:summary, scope: 'actions') %></h1>
+<h1 class="title"><%=	t(:summary_tasks, scope: 'actions') %></h1>
 
 <table>
   <thead>
